--- a/_includes/core/footer.html
+++ b/_includes/core/footer.html
@@ -22,8 +22,8 @@
                     </div>
                     <div class="col-md-3 col-sm-6">
                         <h6>Thông tin Showroom</h6>
-                        <ul>
-                            <li><a href="{{ site.baseurl }}/lien-he">Liên hệ</a></li>
+                        <ul><li>Địa chỉ: Số 889, tổ 9, phường Phú Lãm, quận Hà Đông, Hà Nội</li>
+                            <li><a href="#">Liên hệ</a></li>
                             <li><a href="#">Đối tác</a></li>
                         </ul>
                     </div>
