--- a/_layouts/detail.html
+++ b/_layouts/detail.html
@@ -173,7 +173,7 @@ layout: default
                         <input type="text" class="form-control" placeholder="Số điện thoại" name="phone-number">
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Dòng xe" name="vehicle line">
+                        <input type="text" class="form-control" placeholder="Dòng xe" name="dong-xe">
                     </div>
                     
                     <div class="form-group">
