--- a/_includes/custom/about.html
+++ b/_includes/custom/about.html
@@ -13,7 +13,7 @@
                         <h3>SELTOS <span>2020</span></h3>
                         <p>KẾT HỢP HOÀN HẢO GIỮA HÌNH TƯỢNG MẠNH MẼ, PHONG CÁCH NĂNG ĐỘNG CÙNG CÁC CHI TIẾT TINH XẢO.
                         </p>
-                        <a href="http://localhost:4000/car-models/#seltos" class="btn">Xem ngay<i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a>
+                        <a href="https://kiayennghia.dailykia5s.com/car-models/#seltos" class="btn">Xem ngay<i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
@@ -24,7 +24,7 @@
                         <h3>SORENTO <span>2021</span></h3>
                         <p>KẾT HỢP HOÀN HẢO GIỮA HÌNH TƯỢNG MẠNH MẼ, PHONG CÁCH NĂNG ĐỘNG CÙNG CÁC CHI TIẾT TINH XẢO.
                         </p>
-                        <a href="http://localhost:4000/car-models/#sorento" class="btn">Xem ngay<i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a>
+                        <a href="https://kiayennghia.dailykia5s.com/car-models/#sorento" class="btn">Xem ngay<i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
