--- a/_layouts/detail.html
+++ b/_layouts/detail.html
@@ -32,15 +32,14 @@ layout: default
 
 <section class="listing_other_info secondary-bg">
     <div class="container">
-        <div id="other_info"><i class="fa fa-info-circle" aria-hidden="true"></i></div>
         <div id="info_toggle">
-            <button type="button" data-toggle="modal" data-target="#schedule"> <i class="fa fa-car"
+            <button type="button" data-toggle="modal" data-target="#schedule" id="schedule"> <i class="fa fa-car"
                     aria-hidden="true"></i> Đăng ký lái thử </button>
-            <button type="button" data-toggle="modal" data-target="#make_offer"> <i class="fa fa-money"
+            <button type="button" data-toggle="modal" data-target="#make_offer" id="make_offer"> <i class="fa fa-money"
                     aria-hidden="true"></i> Nhận báo giá </button>
-            <button type="button" data-toggle="modal" data-target="#email_friend"> <i class="fa fa-envelope"
+            <button type="button" data-toggle="modal" data-target="#email_friend" id="email_friend"> <i class="fa fa-envelope"
                     aria-hidden="true"></i> Gửi email </button>
-            <button type="button" data-toggle="modal" data-target="#more_info"> <i class="fa fa-file-text-o"
+            <button type="button" data-toggle="modal" data-target="#more_info" id="more_info"> <i class="fa fa-file-text-o"
                     aria-hidden="true"></i> Yêu cầu thêm thông tin </button>
         </div>
     </div>
