add link banner

--- a/_includes/custom/banners.html
+++ b/_includes/custom/banners.html
@@ -14,7 +14,7 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <a href="#">
+        <a href="https://kiayennghia.dailykia5s.com/xe-kia">
           <img
             src="../../assets/images/banner/kia-motor-yennghia.jpg"
             alt="Kia Cerato"
@@ -24,7 +24,7 @@
       </div>
 
       <div class="item">
-        <a href="#">
+        <a href="http://kiayennghia.dailykia5s.com/car-models/#sorento">
           <img
             src="../../assets/images/banner/sorento-kia5s-yennghia.jpg"
             alt="Kia Morning"
@@ -34,7 +34,7 @@
       </div>
 
       <div class="item">
-        <a href="#">
+        <a href="http://kiayennghia.dailykia5s.com/car-models/#sedona">
           <img
             src="../../assets/images/banner/sedona-kia5s-yennghia.jpg"
             alt="Kia Sedona"
@@ -44,7 +44,7 @@
       </div>
 
       <div class="item">
-        <a href="#">
+        <a href="http://kiayennghia.dailykia5s.com/car-models/#cerato">
           <img
             src="../../assets/images/banner/cerato-kia5s-yennghia.jpg"
             alt="Kia Soluto"
@@ -54,7 +54,7 @@
       </div>
 
       <div class="item">
-        <a href="#">
+        <a href="http://kiayennghia.dailykia5s.com/car-models/#soluto">
           <img
             src="../../assets/images/banner/soluto-kia5s-yennghia.jpg"
             alt="Kia Soluto"
@@ -64,7 +64,7 @@
       </div>
 
       <div class="item">
-        <a href="#">
+        <a href="http://kiayennghia.dailykia5s.com/car-models/#morning">
           <img
             src="../../assets/images/banner/morning-kia5s-yennghia.jpg"
             alt="Kia Soluto"
@@ -74,7 +74,7 @@
       </div>
 
       <div class="item">
-        <a href="#">
+        <a href="http://kiayennghia.dailykia5s.com/car-models/#seltos">
           <img
             src="../../assets/images/banner/banner-web-seltos.jpg"
             alt="Kia Soluto"
