--- a/_includes/custom/about.html
+++ b/_includes/custom/about.html
@@ -8,7 +8,10 @@
         <div class="row">
             <div class="col-lg-6 col-sm-6">
                 <div class="looking-car">
-                    <div class="looking-cat-image"> <img src="assets/images/KIA-SELTOS.png" alt="Image" /> </div>
+                    <a href="https://kiayennghia.dailykia5s.com/car-models/#seltos" class="btn">
+                        <div class="looking-cat-image"> <img src="assets/images/KIA-SELTOS.png" alt="Image" /> </div>
+                    </a>
+                    
                     <div class="looking-car-content">
                         <h3>SELTOS <span>2020</span></h3>
                         <p>KẾT HỢP HOÀN HẢO GIỮA HÌNH TƯỢNG MẠNH MẼ, PHONG CÁCH NĂNG ĐỘNG CÙNG CÁC CHI TIẾT TINH XẢO.
@@ -19,7 +22,9 @@
             </div>
             <div class="col-lg-6 col-sm-6">
                 <div class="looking-car">
-                    <div class="looking-cat-image"> <img src="assets/images/sorento-2021.png" alt="Image" /> </div>
+                    <a href="https://kiayennghia.dailykia5s.com/car-models/#sorento" class="btn">
+                        <div class="looking-cat-image"> <img src="assets/images/sorento-2021.png" alt="Image" /> </div>
+                    </a>
                     <div class="looking-car-content">
                         <h3>SORENTO <span>2021</span></h3>
                         <p>KẾT HỢP HOÀN HẢO GIỮA HÌNH TƯỢNG MẠNH MẼ, PHONG CÁCH NĂNG ĐỘNG CÙNG CÁC CHI TIẾT TINH XẢO.
