--- a/_includes/custom/about.html
+++ b/_includes/custom/about.html
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col-lg-6 col-sm-6">
                 <div class="looking-car">
-                    <a href="https://kiayennghia.dailykia5s.com/car-models/#seltos" class="btn">
+                    <a href="https://kiayennghia.dailykia5s.com/car-models/#seltos">
                         <div class="looking-cat-image"> <img src="assets/images/KIA-SELTOS.png" alt="Image" /> </div>
                     </a>
                     
@@ -22,7 +22,7 @@
             </div>
             <div class="col-lg-6 col-sm-6">
                 <div class="looking-car">
-                    <a href="https://kiayennghia.dailykia5s.com/car-models/#sorento" class="btn">
+                    <a href="https://kiayennghia.dailykia5s.com/car-models/#sorento">
                         <div class="looking-cat-image"> <img src="assets/images/sorento-2021.png" alt="Image" /> </div>
                     </a>
                     <div class="looking-car-content">
