--- a/_includes/details/form.html
+++ b/_includes/details/form.html
@@ -9,7 +9,17 @@
         <input type="text" class="form-control" placeholder="Số điện thoại" name="phone-number">
     </div>
     <div class="form-group">
-        <textarea rows="4" class="form-control" placeholder="Dòng xe" name="dong-xe"></textarea>
+        <select class="form-control" name="mau-xe" id="car-md">
+            <option value="">Chọn mẫu xe</option>
+            <option value="cerato">Cerato</option>
+            <option value="morning">Morning</option>
+            <option value="optima">Optima</option>
+            <option value="rondo">Rondo</option>
+            <option value="sedona">Sedona</option>
+            <option value="seltos">Seltos</option>
+            <option value="soluto">Soluto</option>
+            <option value="sorento">Sorento</option>
+        </select>
     </div>
     <div class="form-group">
         <input type="submit" value="Gửi" class="btn btn-block">
