--- a/_layouts/detail.html
+++ b/_layouts/detail.html
@@ -174,7 +174,17 @@ layout: default
                         <input type="text" class="form-control" placeholder="Số điện thoại" name="phone-number">
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Dòng xe" name="dong-xe">
+                        <select class="form-control" name="mau-xe" id="mau-lai-thu">
+                            <option value="">Chọn mẫu xe</option>
+                            <option value="cerato">Cerato</option>
+                            <option value="morning">Morning</option>
+                            <option value="optima">Optima</option>
+                            <option value="rondo">Rondo</option>
+                            <option value="sedona">Sedona</option>
+                            <option value="seltos">Seltos</option>
+                            <option value="soluto">Soluto</option>
+                            <option value="sorento">Sorento</option>
+                        </select>
                     </div>
                     
                     <div class="form-group">
