--- a/_includes/details/laithu.html
+++ b/_includes/details/laithu.html
@@ -10,11 +10,11 @@
       
       function success() {
         form.reset();
-        status.innerHTML = "Gửi báo giá thành công!";
+        status.innerHTML = "Gửi thông tin thành công!";
       }
   
       function error() {
-        status.innerHTML = "Gửi báo giá chưa thành công. Vui lòng thử lại!";
+        status.innerHTML = "Gửi thông tin chưa thành công. Vui lòng thử lại!";
       }
   
       // handle the form submission event
