--- a/_layouts/detail.html
+++ b/_layouts/detail.html
@@ -174,7 +174,7 @@ layout: default
                         <input type="text" class="form-control" placeholder="Số điện thoại" name="phone-number">
                     </div>
                     <div class="form-group">
-                        <select class="form-control" name="mau-xe" id="mau-lai-thu">
+                        <select class="form-control" name="mau-xe">
                             <option value="">Chọn mẫu xe</option>
                             <option value="cerato">Cerato</option>
                             <option value="morning">Morning</option>
