--- a/_includes/details/form.html
+++ b/_includes/details/form.html
@@ -9,7 +9,7 @@
         <input type="text" class="form-control" placeholder="Số điện thoại" name="phone-number">
     </div>
     <div class="form-group">
-        <select class="form-control" name="mau-xe" id="car-md">
+        <select class="form-control" name="mau-xe">
             <option value="">Chọn mẫu xe</option>
             <option value="cerato">Cerato</option>
             <option value="morning">Morning</option>
