--- a/_includes/core/call-me.html
+++ b/_includes/core/call-me.html
@@ -1,13 +1,14 @@
 <a class="add-widget widget-zalo"
-  href="https://zalo.me/0974876588"
+  href="https://zalo.me/0346084666"
   title="Chat trên Zalo"
   target="_blank"
   ><span class="widget-circle"><i class="fa-icon">&nbsp;</i>
 </span>
 </a>
-<a class="phone-ring" href="tel:0974876588" title="Gọi để được tư vấn ngay!">
+<a class="phone-ring" href="tel:{{ site.phone }}" title="Gọi để được tư vấn ngay!">
   <span class="phone-circle">
     <i class="fa fa-phone"></i>
     <span class="ping"></span>
   </span>
+  <span class="phone">0346 084 666</span>
 </a>
