--- a/_layouts/detail.html
+++ b/_layouts/detail.html
@@ -22,6 +22,7 @@ layout: default
             <div class="col-md-3">
                 <div class="price_info">
                     <p>{{ page.price }} VNĐ</p>
+                    <p class="old_price">{{ page.old_price }} VNĐ</p>
                 </div>
             </div>
         </div>
