--- a/_includes/custom/resent-cat.html
+++ b/_includes/custom/resent-cat.html
@@ -22,17 +22,21 @@
 
 
       <div class="tab-content">
-        <!-- Sedora -->
-        <div role="tabpanel" class="tab-pane active" id="sedona">
-          {% include cars/sedona.html %}
+        <!-- Cerato -->
+        <div role="tabpanel" class="tab-pane active" id="cerato">
+          {% include cars/cerato.html %}
         </div>
         <!-- Sorento -->
         <div role="tabpanel" class="tab-pane" id="sorento">
           {% include cars/sorento.html %}
         </div>
-        <!-- Rondo -->
-        <div role="tabpanel" class="tab-pane" id="cerato">
-          {% include cars/cerato.html %}
+        <!-- Seltos -->
+        <div role="tabpanel" class="tab-pane" id="seltos">
+          {% include cars/seltos.html %}
+        </div>
+        <!-- Sedona -->
+        <div role="tabpanel" class="tab-pane" id="sedona">
+          {% include cars/sedona.html %}
         </div>
         <!-- Optima -->
         <div role="tabpanel" class="tab-pane" id="optima">
@@ -41,10 +45,6 @@
         <!-- Morning -->
         <div role="tabpanel" class="tab-pane" id="morning">
           {% include cars/morning.html %}
-        </div>
-        <!-- Seltos -->
-        <div role="tabpanel" class="tab-pane" id="seltos">
-          {% include cars/seltos.html %}
         </div>
       </div>
     </div>
