--- a/_includes/custom/resent-cat.html
+++ b/_includes/custom/resent-cat.html
@@ -39,8 +39,8 @@
           {% include cars/sedona.html %}
         </div>
         <!-- Optima -->
-        <div role="tabpanel" class="tab-pane" id="optima">
-          {% include cars/optima.html %}
+        <div role="tabpanel" class="tab-pane" id="soluto">
+          {% include cars/soluto.html %}
         </div>
         <!-- Morning -->
         <div role="tabpanel" class="tab-pane" id="morning">
