--- a/_includes/cars/seltos.html
+++ b/_includes/cars/seltos.html
@@ -12,7 +12,7 @@
                     <p class="featured-price">{{ se.price }}</p>
                     <div class="car-location">
                         <span><i class="fa fa-map-marker" aria-hidden="true"></i>
-                            Colorado, USA</span>
+                            Kia Yên nghĩa</span>
                     </div>
                 </div>
                 <ul>
