--- a/_includes/core/footer.html
+++ b/_includes/core/footer.html
@@ -5,11 +5,11 @@
                     <div class="col-md-3 col-sm-6">
                         <h6>Xe Kia</h6>
                         <ul>
-                            <li><a href="{{ site.base.url }}/car-models/#sedora">Sedora</a></li>
-                            <li><a href="{{ site.base.url }}/car-models/#sorento"">Sorento</a></li>
-                            <li><a href="{{ site.base.url }}/car-models/#rondo"">Rondo</a></li>
-                            <li><a href="{{ site.base.url }}/car-models/#optima"">Optima</a></li>
-                            <li><a href="{{ site.base.url }}/car-models/#morning">Morning</a></li>
+                            <li><a href="{{ site.base.url }}/sedona">Sedora</a></li>
+                            <li><a href="{{ site.base.url }}/sorento"">Sorento</a></li>
+                            <li><a href="{{ site.base.url }}/rondo"">Rondo</a></li>
+                            <li><a href="{{ site.base.url }}/optima"">Optima</a></li>
+                            <li><a href="{{ site.base.url }}/morning">Morning</a></li>
                         </ul>
                     </div>
                     <div class="col-md-3 col-sm-6">
