--- a/_includes/custom/about.html
+++ b/_includes/custom/about.html
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col-lg-6 col-sm-6">
                 <div class="looking-car">
-                    <a href="https://kiayennghia.dailykia5s.com/car-models/#seltos">
+                    <a href="{{ site.baseurl }}seltos">
                         <div class="looking-cat-image"> <img src="assets/images/KIA-SELTOS.png" alt="Image" /> </div>
                     </a>
                     
@@ -16,20 +16,20 @@
                         <h3>SELTOS <span>2021</span></h3>
                         <p>KẾT HỢP HOÀN HẢO GIỮA HÌNH TƯỢNG MẠNH MẼ, PHONG CÁCH NĂNG ĐỘNG CÙNG CÁC CHI TIẾT TINH XẢO.
                         </p>
-                        <a href="https://kiayennghia.dailykia5s.com/car-models/#seltos" class="btn">Xem ngay<i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a>
+                        <a href="{{ site.baseurl }}seltos" class="btn">Xem ngay<i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
             <div class="col-lg-6 col-sm-6">
                 <div class="looking-car">
-                    <a href="https://kiayennghia.dailykia5s.com/car-models/#sorento">
+                    <a href="{{ site.baseurl }}sorento">
                         <div class="looking-cat-image"> <img src="assets/images/sorento-2021.png" alt="Image" /> </div>
                     </a>
                     <div class="looking-car-content">
                         <h3>SORENTO <span>2021</span></h3>
                         <p>KẾT HỢP HOÀN HẢO GIỮA HÌNH TƯỢNG MẠNH MẼ, PHONG CÁCH NĂNG ĐỘNG CÙNG CÁC CHI TIẾT TINH XẢO.
                         </p>
-                        <a href="https://kiayennghia.dailykia5s.com/car-models/#sorento" class="btn">Xem ngay<i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a>
+                        <a href="{{ site.baseurl }}sorento" class="btn">Xem ngay<i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
