--- a/_includes/custom/banners.html
+++ b/_includes/custom/banners.html
@@ -14,7 +14,7 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <a href="https://kiayennghia.dailykia5s.com/xe-kia">
+        <a href="{{ site.baseurl }}/xe-kia">
           <img
             src="../../assets/images/banner/banner-web-line-up.jpg"
             alt="Kia Cerato"
@@ -24,7 +24,7 @@
       </div>
 
       <div class="item">
-        <a href="http://kiayennghia.dailykia5s.com/car-models/#sorento">
+        <a href="{{ site.baseurl }}/sorento">
           <img
             src="../../assets/images/banner/banner-web-sorento-all-new-1.jpg"
             alt="Kia Morning"
@@ -34,7 +34,7 @@
       </div>
 
       <div class="item">
-        <a href="http://kiayennghia.dailykia5s.com/car-models/#seltos">
+        <a href="{{ site.baseurl }}/seltos">
           <img
             src="../../assets/images/banner/banner-web-seltos-1.jpg"
             alt="Kia Sedona"
@@ -44,7 +44,7 @@
       </div>
 
       <div class="item">
-        <a href="http://kiayennghia.dailykia5s.com/car-models/#cerato">
+        <a href="{{ site.baseurl }}/cerato">
           <img
             src="../../assets/images/banner/banner-web-cerato-1.jpg"
             alt="Kia Soluto"
@@ -54,7 +54,7 @@
       </div>
 
       <div class="item">
-        <a href="http://kiayennghia.dailykia5s.com/car-models/#sedona">
+        <a href="{{ site.baseurl }}/sedona">
           <img
             src="../../assets/images/banner/banner-web-sedona-1.jpg"
             alt="Kia Soluto"
@@ -64,7 +64,7 @@
       </div>
 
       <div class="item">
-        <a href="http://kiayennghia.dailykia5s.com/car-models/#morning">
+        <a href="{{ site.baseurl }}/morning">
           <img
             src="../../assets/images/banner/banner-web-new-morning-1.jpg"
             alt="Kia Soluto"
@@ -74,7 +74,7 @@
       </div>
 
       <div class="item">
-        <a href="http://kiayennghia.dailykia5s.com/car-models/#soluto">
+        <a href="{{ site.baseurl }}/soluto">
           <img
             src="../../assets/images/banner/banner-web-soluto-1.jpg"
             alt="Kia Soluto"
