--- a/_includes/core/header.html
+++ b/_includes/core/header.html
@@ -42,9 +42,20 @@
                 {% include core/search.html %}
                 <div class="collapse navbar-collapse" id="navigation">
                     <ul class="nav navbar-nav">
-                        {% for nav in site.data.navigation %}
-                        <li><a href="{{ nav.link | relative_url }}">{{ nav.name }}</a></li>
-                        {% endfor %}
+                       <li><a href="/">Trang chủ</a></li>
+                       <li class="dropdown"><a href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sản phẩm</a>
+                         <ul class="dropdown-menu">
+                           <li><a href="/cerato">Cerato</a></li>
+                           <li><a href="/sorento">Sorento</a></li>
+                           <li><a href="/seltos">Seltos</a></li>
+                           <li><a href="/sedona">Sedona</a></li>
+                           <li><a href="/soluto">Soluto</a></li>
+                           <li><a href="/morning">Morning</a></li>
+                         </ul>
+                       </li>
+                       <li><a href="/tra-gop">Thủ tục trả góp</a></li>
+                       <li><a href="/lai-thu">Đăng ký lái thử</a></li>
+                       <li><a href="/thong-tin">Về Showroom</a></li>
                     </ul>
                 </div>
             </div>
