--- a/_includes/core/header.html
+++ b/_includes/core/header.html
@@ -42,8 +42,8 @@
                 {% include core/search.html %}
                 <div class="collapse navbar-collapse" id="navigation">
                     <ul class="nav navbar-nav">
-                       <li><a href="/">Trang chủ</a></li>
-                       <li class="dropdown"><a href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sản phẩm</a>
+                       <li><a href="/">TRANG CHỦ</a></li>
+                       <li class="dropdown"><a href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">SẢN PHẨM</a>
                          <ul class="dropdown-menu">
                            <li><a href="/cerato">Cerato</a></li>
                            <li><a href="/sorento">Sorento</a></li>
@@ -53,9 +53,9 @@
                            <li><a href="/morning">Morning</a></li>
                          </ul>
                        </li>
-                       <li><a href="/tra-gop">Thủ tục trả góp</a></li>
-                       <li><a href="/lai-thu">Đăng ký lái thử</a></li>
-                       <li><a href="/thong-tin">Về Showroom</a></li>
+                       <li><a href="/tra-gop">THỦ TỤC TRẢ GÓP</a></li>
+                       <li><a href="/lai-thu">ĐĂNG KÝ LÁI THỬ</a></li>
+                       <li><a href="/thong-tin">VỀ SHOWROM</a></li>
                     </ul>
                 </div>
             </div>
