--- a/_includes/core/header.html
+++ b/_includes/core/header.html
@@ -45,12 +45,12 @@
                        <li><a href="/">TRANG CHỦ</a></li>
                        <li class="dropdown"><a href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">SẢN PHẨM</a>
                          <ul class="dropdown-menu">
-                           <li><a href="/cerato">Cerato</a></li>
-                           <li><a href="/sorento">Sorento</a></li>
-                           <li><a href="/seltos">Seltos</a></li>
-                           <li><a href="/sedona">Sedona</a></li>
-                           <li><a href="/soluto">Soluto</a></li>
-                           <li><a href="/morning">Morning</a></li>
+                           <li><a href="/cerato">CERATO</a></li>
+                           <li><a href="/sorento">SORENTO</a></li>
+                           <li><a href="/seltos">SELTOS</a></li>
+                           <li><a href="/sedona">SEDONA</a></li>
+                           <li><a href="/soluto">SOLUTO</a></li>
+                           <li><a href="/morning">MORNING</a></li>
                          </ul>
                        </li>
                        <li><a href="/tra-gop">THỦ TỤC TRẢ GÓP</a></li>
