--- a/_includes/cars/sonet.html
+++ b/_includes/cars/sonet.html
@@ -1,4 +1,4 @@
-{% for so in site.sorento %}
+{% for so in site.sonet %}
 <div class="col-list-3">
     <div class="recent-car-list">
         <div class="featured-car-list">
