--- a/_includes/core/call-me.html
+++ b/_includes/core/call-me.html
@@ -1,5 +1,5 @@
 <a class="add-widget widget-zalo"
-  href="https://zalo.me/0346084666"
+  href="https://zalo.me/0901468383"
   title="Chat trên Zalo"
   target="_blank"
   ><span class="widget-circle"><i class="fa-icon">&nbsp;</i>
@@ -10,5 +10,5 @@
     <i class="fa fa-phone"></i>
     <span class="ping"></span>
   </span>
-  <span class="phone">0346 084 666</span>
+  <span class="phone">090 146 83 83</span>
 </a>
