--- a/_includes/core/header.html
+++ b/_includes/core/header.html
@@ -48,6 +48,7 @@
                            <li><a href="/cerato">CERATO</a></li>
                            <li><a href="/sorento">SORENTO</a></li>
                            <li><a href="/seltos">SELTOS</a></li>
+                           <li><a href="/sonet">SONET</a></li>
                            <li><a href="/sedona">SEDONA</a></li>
                            <li><a href="/soluto">SOLUTO</a></li>
                            <li><a href="/morning">MORNING</a></li>
