--- a/_includes/custom/resent-cat.html
+++ b/_includes/custom/resent-cat.html
@@ -26,9 +26,9 @@
         <div role="tabpanel" class="tab-pane active" id="cerato">
           {% include cars/cerato.html %}
         </div>
-        <!-- Sorento -->
-        <div role="tabpanel" class="tab-pane" id="sorento">
-          {% include cars/sorento.html %}
+        <!-- Sonet -->
+        <div role="tabpanel" class="tab-pane" id="sonet">
+          {% include cars/sonet.html %}
         </div>
         <!-- Seltos -->
         <div role="tabpanel" class="tab-pane" id="seltos">
