--- a/_includes/custom/resent-cat.html
+++ b/_includes/custom/resent-cat.html
@@ -26,6 +26,10 @@
         <div role="tabpanel" class="tab-pane active" id="cerato">
           {% include cars/cerato.html %}
         </div>
+        <!-- Sorento -->
+        <div role="tabpanel" class="tab-pane" id="sorento">
+          {% include cars/sorento.html %}
+        </div>
         <!-- Sonet -->
         <div role="tabpanel" class="tab-pane" id="sonet">
           {% include cars/sonet.html %}
