Change sonet post

--- a/_includes/core/header.html
+++ b/_includes/core/header.html
@@ -3,7 +3,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-3 col-md-2">
-                        <div class="logo"> <a href="/"><img src="{{ site.baseurl }}/assets/images/kia-logo.png" alt=" Kia Yên Nghĩa" /></a>
+                        <div class="logo"> <a href="/"><img src="{{ site.baseurl }}/assets/images/logo1.png" alt=" Kia Yên Nghĩa" /></a>
                         </div>
                     </div>
                     <span class="logo-text">KIA YÊN NGHĨA</span>
@@ -17,7 +17,7 @@
                             <div class="header_widgets">
                                 <div class="circle_icon"> <i class="fa fa-phone" aria-hidden="true"></i> </div>
                                 <p class="uppercase_text">Nhân viên kinh doanh: </p>
-                                <a href="tel:{{ site.phone }}">{{ site.phone }}</a>
+                                <a href="tel:{{ site.phone }}" style="font-weight: bold; color: red;">{{ site.phone }}</a>
                             </div>
                             <div class="social-follow">
                                 {% include core/social.html %}
