--- a/_includes/core/header.html
+++ b/_includes/core/header.html
@@ -46,12 +46,13 @@
                        <li class="dropdown"><a href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">SẢN PHẨM</a>
                          <ul class="dropdown-menu">
                            <li><a href="/cerato">CERATO</a></li>
-                           <li><a href="/sorento">SORENTO</a></li>
-                           <li><a href="/seltos">SELTOS</a></li>
-                           <li><a href="/sonet">SONET</a></li>
-                           <li><a href="/sedona">SEDONA</a></li>
-                           <li><a href="/soluto">SOLUTO</a></li>
+                           <li><a href="/k3">K3</a></li>
                            <li><a href="/morning">MORNING</a></li>
+                           <li><a href="/sedona">SEDONA</a></li>
+                           <li><a href="/seltos">SELTOS</a></li>
+                           <li><a href="/soluto">SOLUTO</a></li>
+                           <li><a href="/sonet">SONET</a></li>
+                           <li><a href="/sorento">SORENTO</a></li>
                          </ul>
                        </li>
                        <li><a href="/tra-gop">THỦ TỤC TRẢ GÓP</a></li>
