--- a/_includes/custom/resent-cat.html
+++ b/_includes/custom/resent-cat.html
@@ -22,9 +22,9 @@
 
 
       <div class="tab-content">
-        <!-- Cerato -->
-        <div role="tabpanel" class="tab-pane active" id="cerato">
-          {% include cars/cerato.html %}
+        <!-- K3 -->
+        <div role="tabpanel" class="tab-pane active" id="k3">
+          {% include cars/k3.html %}
         </div>
         <!-- Sorento -->
         <div role="tabpanel" class="tab-pane" id="sorento">
